--- a/index_covid19.html
+++ b/index_covid19.html
@@ -332,7 +332,7 @@
                 <div class="trends_background" style="background-image:url(images/trends_background.jpg)"></div>
                 <div class="trends_overlay"></div>
                 <div class="container">
-                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&新冠肺炎</a></div>
+                <div class="advert_title" style="font-size: 14px;">目前位置：<a href="#">&nbsp新冠肺炎</a></div>
                     <div class="row" style="padding-top: 20px;">
                         <!-- Trends Slider -->
                         <div class="col-lg-12">
